Update - Pre_process_data almost complete

--- a/Final_work/Codes/Pre_process_data.ipynb
+++ b/Final_work/Codes/Pre_process_data.ipynb
@@ -2,13 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Import the libraries\n",
     "import geemap\n",
-    "import ee"
+    "import ee\n",
+    "from pydrive.auth import GoogleAuth\n",
+    "from pydrive.drive import GoogleDrive"
    ]
   },
   {
@@ -125,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be2eaa7706584c16a2348fe4d76c030b",
+       "model_id": "3701147110684c948e865611cb7d9b95",
        "version_major": 2,
        "version_minor": 0
       },
@@ -173,7 +210,7 @@
        "Map(center=[11.2114, -15.1915], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=SearchD…"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +480,7 @@
     "texture1 = texture.mean()\n",
     "\n",
     "\n",
-    "# Seleccionar la banda NIR\n",
+    "# Seleccionar la banda NIR, for the type of calculation shoud be in Int32, because glcmTexture only admit these type of data\n",
     "nir = composite.select('b8').toInt32()\n",
     "\n",
     "# Calcular la textura utilizando el índice de contraste (Contrast Index)\n",
@@ -467,6 +504,144 @@
     "# 'RNDSI', 'NDSI', 'NDWI','b3_1 (Silt Raster)','b4_1 (Clay Raster'\n",
     "#Exportar las bandas para modelar Cafine.\n",
     "export = composite.select(['RNDSI', 'NDWI','NDSI','b3_1'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the next line. You can see the process of export in: https://code.earthengine.google.com/ or in https://code.earthengine.google.com/tasks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "geemap.ee_export_image_to_drive(\n",
+    "    export, description='PS_Index_filtered', folder='ML_Final_Work', region=geometry, scale= 3, crs = 'EPSG:2095'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydrive.auth import GoogleAuth\n",
+    "from pydrive.drive import GoogleDrive\n",
+    "\n",
+    "credentials_path = 'C:/Users/cespe/client_secret_775448020170-glgpi5v37ur14of7spbms2gi67g7silt.apps.googleusercontent.com.json'\n",
+    "\n",
+    "# Autenticar y crear la instancia de PyDrive\n",
+    "gauth = GoogleAuth()\n",
+    "gauth.LoadClientConfigFile(credentials_path)\n",
+    "gauth.LocalWebserverAuth()  # Abre una ventana del navegador para autenticarse\n",
+    "\n",
+    "drive = GoogleDrive(gauth)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo PS_Index_filtered.tif descargado exitosamente.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ID de la carpeta en Google Drive\n",
+    "folder_id = '1gFgdT90qRKu4pFW-fVbKagEzPrkKTSDb'  # Reemplaza con el ID real de tu carpeta\n",
+    "file_title = 'PS_Index_filtered.tif'  # Nombre del archivo que buscas\n",
+    "\n",
+    "try:\n",
+    "    file_list = drive.ListFile({'q': f\"'{folder_id}' in parents and trashed=false\"}).GetList()\n",
+    "    for file in file_list:\n",
+    "        if file['title'] == file_title:\n",
+    "            file.GetContentFile(file_title)  # Descargar el archivo\n",
+    "            print(f\"Archivo {file_title} descargado exitosamente.\")\n",
+    "            break\n",
+    "    else:\n",
+    "        print(f\"Archivo {file_title} no encontrado en la carpeta {folder_id}.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error al buscar el archivo en Google Drive: {e}\")\n"
    ]
   }
  ],
