Update - add markdown and commits

--- a/Final_work/Codes/Pre_process_data.ipynb
+++ b/Final_work/Codes/Pre_process_data.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process for preparing the PlanetScope Image download.\n",
+    "\n",
+    "Considerations:\n",
+    "\n",
+    " 1. The image was ready downloaded from the PlanetScope repository and uploaded to Google Cloud Earth Engine Asset.\n",
+    " 2. This was done to avoid the high time in calculating the indexes it is more efficient to do this using geemap and/or python."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -643,6 +655,20 @@
     "except Exception as e:\n",
     "    print(f\"Error al buscar el archivo en Google Drive: {e}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Buffer for image statistics extraction and correlation with sodium absorption rate (SAR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
