Update - starting CNN

--- a/Final_work/Codes/Pre_process_data.ipynb
+++ b/Final_work/Codes/Pre_process_data.ipynb
@@ -2517,6 +2517,20 @@
     "plt.title('')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The index considered in this case are based on: Tan, J.; Ding, J.; Han, L.; Ge, X.; Wang, X.; Wang, J.; Wang, R.; Qin, S.; Zhang, Z.; Li, Y. Exploring PlanetScope Satellite Capabilities for Soil Salinity Estimation and Mapping in Arid Regions Oases. Remote Sens. 2023, 15, 1066. https://doi.org/10.3390/rs15041066\n",
+    "\n",
+    "Based on the results and the type of index, to avoid multicolinearity the selected index for modeling are:\n",
+    "\n",
+    "1. YNNDSI\n",
+    "2. Clay-Raster\n",
+    "3. YBS2\n",
+    "4. RS5_G2"
+   ]
   }
  ],
  "metadata": {
