Update - Comments update in english

--- a/Final_work/Codes/Pre_process_data.ipynb
+++ b/Final_work/Codes/Pre_process_data.ipynb
@@ -4,12 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Process for PlanetScope Image download.\n",
+    "## Process for PlanetScope Image Download\n",
     "\n",
-    "Considerations:\n",
+    "### Considerations:\n",
     "\n",
-    " 1. The image was ready downloaded from the PlanetScope repository and uploaded to Google Cloud Earth Engine Asset.\n",
-    " 2. This was done to avoid the high time in calculating the indexes it is more efficient to do this using geemap and/or python."
+    "1. The image was already downloaded from the PlanetScope repository and uploaded to Google Cloud Earth Engine Asset.\n",
+    "2. This was done to avoid the high time in calculating the indexes; it is more efficient to do this using geemap and/or Python.\n",
+    "\n",
+    "### Index \n",
+    "\n",
+    "### 1. Prepare the image for download\n",
+    "### 2. The image exported to Drive needs to be downloaded using PyDrive\n",
+    "### 3. Buffer for image statistics extraction and correlation with Sodium Absorption Rate (SAR)\n",
+    "   3.1. Call the image from GEE, download, and extract buffer data  \n",
+    "   3.2. Identify outliers to ensure optimal data conditions  \n",
+    "   3.3. Call the image and extract buffer data  \n",
+    "   3.4. Create a corrplot to visualize the correlation between different indices and SAR data  \n",
+    "   3.5. Export the index with the highest correlation for making predictions\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## 1. Prepare the image for download "
    ]
   },
   {
@@ -76,6 +94,7 @@
     }
    ],
    "source": [
+    "# Authenticate your GEE account\n",
     "ee.Authenticate() "
    ]
   },
@@ -120,6 +139,7 @@
     }
    ],
    "source": [
+    "# Initialize GEE \n",
     "ee.Initialize()"
    ]
   },
@@ -179,8 +199,7 @@
     }
    ],
    "source": [
-    "#Nota: Acá debemos dibujar un área de interés. Sino en adelante nos fallará el código.\n",
-    "\n",
+    "# Add a map to display the image and index\n",
     "Map = geemap.Map(center = (11.2114, -15.1915), zoom = 12)\n",
     "Map"
    ]
@@ -226,12 +245,22 @@
     }
    ],
    "source": [
-    "# Asegurarnos de la creación de una geometría / Por si no la crearon en el mapa anterior.\n",
+    "# Ensure the creation of a geometry of the area for predict\n",
+    "\n",
     "geometry = ee.Geometry.Polygon([[[-15.21471, 11.188674],\n",
     "   [-15.21471, 11.222857],\n",
     "   [-15.133365, 11.222857],\n",
     "   [-15.133365, 11.188674],\n",
     "   [-15.21471, 11.188674]]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The index considered are all that are in this paper: \n",
+    "\n",
+    "Tan, J.; Ding, J.; Han, L.; Ge, X.; Wang, X.; Wang, J.; Wang, R.; Qin, S.; Zhang, Z.; Li, Y. Exploring PlanetScope Satellite Capabilities for Soil Salinity Estimation and Mapping in Arid Regions Oases. Remote Sens. 2023, 15, 1066. https://doi.org/10.3390/rs15041066"
    ]
   },
   {
@@ -275,12 +304,13 @@
     }
    ],
    "source": [
-    "#@title GEE index's\n",
+    "# Call the image collection\n",
     "collection = ee.ImageCollection(\"projects/planetscopejesus/assets/Datos_Gabo\")\n",
     "\n",
     "texture = ee.ImageCollection(\"projects/planetscopejesus/assets/Texture_cafine\")\n",
     "pca = ee.Image('projects/planetscopejesus/assets/pca_cafine').float()\n",
     "\n",
+    "# Filter by date (in this case is the same month of soil sampling)\n",
     "collection = collection.filterDate('2022-05-01', '2022-05-30').filterBounds(geometry) \n",
     "\n",
     "# This function maps spectral indices for salinity Mapping using PlanetScope Imagery\n",
@@ -430,8 +460,6 @@
     "\n",
     "    )\n",
     "\n",
-    "\n",
-    "\n",
     "ps = collection\n",
     "\n",
     "#Add the indices\n",
@@ -443,29 +471,29 @@
     "texture1 = texture.mean()\n",
     "\n",
     "\n",
-    "# Seleccionar la banda NIR, for the type of calculation shoud be in Int32, because glcmTexture only admit these type of data\n",
+    "# Select the NIR band, for the calculation type it must be in Int32, since glcmTexture only supports this data type.\n",
     "nir = composite.select('b8').toInt32()\n",
     "\n",
-    "# Calcular la textura utilizando el índice de contraste (Contrast Index)\n",
+    "# Calculate the texture using the Contrast Index\n",
     "texture = nir.glcmTexture()\n",
     "texture_b8 = texture.select('b8_asm').float()\n",
     "\n",
-    "\n",
+    "# Add the all bands in only one file\n",
     "composite = composite.addBands(texture1).addBands(pca).addBands(texture_b8)\n",
     "\n",
-    "# Agregar la capa de textura al mapa\n",
+    "# Add texture layer to the map and other images (index)\n",
     "Map.addLayer(texture, {}, 'Textura NIR')\n",
     "Map.addLayer(composite, {'bands': ['b6',  'b4',  'b2'], 'min': 201, 'max': 2464}, 'RGB')\n",
     "Map.addLayer(composite, {'bands': ['S1',  'S2',  'S3_G1'], 'min': 0, 'max': 1}, 'Index')\n",
     "\n",
-    "# NOTA RELEVANTE sobre orden raster de textura de suelo caso Cafine:\n",
+    "\n",
+    "# RELEVANT NOTE on soil texture raster order Cafine case:\n",
     "# B1_1 = Clay + Silt\n",
     "# B2_1 = Sand\n",
     "# B3_1 = Silt\n",
     "# B4_1 = Clay\n",
     "\n",
-    "# 'RNDSI', 'NDSI', 'NDWI','b3_1 (Silt Raster)','b4_1 (Clay Raster' - ['RNDSI', 'NDWI','NDSI','b3_1']\n",
-    "#Exportar las bandas para modelar Cafine.\n",
+    "#Export the bands to model Cafine.\n",
     "export = composite.select([\"NDVI\", \"SR\", \"GCVI\", \"NDWI\", \"VARI\", \"GNDVI\", \"GRVI\", \"SAVI\", \"VSSI\", \"S1\", \"S2\", \n",
     "\"S3_G1\", \"S3_G2\", \"S4\", \"S5_G1\", \"S5_G2\", \"S6_G1\", \"S6_G2\", \"SI\", \"NDSI\", \"SI1_G1\", \n",
     "\"SI1_G2\", \"SI2_G1\", \"SI2_G2\", \"SI3_G1\", \"SI3_G2\", \"Int1_G1\", \"Int1_G2\", \"Int2_G1\", \n",
@@ -534,6 +562,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    " ## 2. The image exported to Drive need to be downloaded using pydrive"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -590,13 +626,11 @@
     "\n",
     "credentials_path = 'C:/Users/cespe/client_secret_775448020170-glgpi5v37ur14of7spbms2gi67g7silt.apps.googleusercontent.com.json'\n",
     "\n",
-    "# Autenticar y crear la instancia de PyDrive\n",
+    "# Authenticate and create the PyDrive instance\n",
     "gauth = GoogleAuth()\n",
     "gauth.LoadClientConfigFile(credentials_path)\n",
-    "gauth.LocalWebserverAuth()  # Abre una ventana del navegador para autenticarse\n",
-    "\n",
-    "drive = GoogleDrive(gauth)\n",
-    "\n"
+    "gauth.LocalWebserverAuth()  # Opens a browser window to authenticate\n",
+    "drive = GoogleDrive(gauth)"
    ]
   },
   {
@@ -647,35 +681,42 @@
     }
    ],
    "source": [
-    "# ID de la carpeta en Google Drive\n",
-    "folder_id = '1gFgdT90qRKu4pFW-fVbKagEzPrkKTSDb'  # Reemplaza con el ID real de tu carpeta\n",
-    "file_title = 'PS_Index.tif'  # Nombre del archivo que buscas\n",
+    "# Google Drive folder ID\n",
+    "folder_id = '1gFgdT90qRKu4pFW-fVbKagEzPrkKTSDb'  # Replace with your actual folder ID\n",
+    "file_title = 'PS_Index.tif'  # Name of the file you are looking for\n",
     "\n",
     "try:\n",
+    "    # List all files in the specified folder\n",
     "    file_list = drive.ListFile({'q': f\"'{folder_id}' in parents and trashed=false\"}).GetList()\n",
+    "    \n",
+    "    # Iterate through the file list to find the file with the specified title\n",
     "    for file in file_list:\n",
     "        if file['title'] == file_title:\n",
-    "            file.GetContentFile(file_title)  # Descargar el archivo\n",
-    "            print(f\"Archivo {file_title} descargado exitosamente.\")\n",
+    "            # Download the file\n",
+    "            file.GetContentFile(file_title)\n",
+    "            print(f\"File {file_title} downloaded successfully.\")\n",
     "            break\n",
     "    else:\n",
-    "        print(f\"Archivo {file_title} no encontrado en la carpeta {folder_id}.\")\n",
+    "        # File not found in the folder\n",
+    "        print(f\"File {file_title} not found in folder {folder_id}.\")\n",
     "except Exception as e:\n",
-    "    print(f\"Error al buscar el archivo en Google Drive: {e}\")\n"
+    "    # Print any errors that occur during the process\n",
+    "    print(f\"Error while searching for the file in Google Drive: {e}\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Buffer for image statistics extraction and correlation with Sodium Absorption Rate (SAR)"
+    "## 3. Buffer for image statistics extraction and correlation with Sodium Absorption Rate (SAR)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Call the image from GEE, download and extract buffer data"
+    "### 3.1 Call the data of the soil samples"
    ]
   },
   {
@@ -857,8 +898,6 @@
     "center = training_vectors.geometry.centroid\n",
     "\n",
     "# show the 1st 5 lines\n",
-    "\n",
-    "# show the 1st 5 lines\n",
     "training_vectors.head()\n"
    ]
   },
@@ -984,6 +1023,13 @@
     "classes.shape\n",
     "\n",
     "print(classes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 Find outliers to be sure that we have data in the best conditions"
    ]
   },
   {
@@ -1331,6 +1377,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 Call the image and extract buffer data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
@@ -1447,7 +1500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Make a corrplot to see the correlation of the different index's and SAR data"
+    "### 3.4 Make a corrplot to see the correlation of the different index's and SAR data"
    ]
   },
   {
@@ -1862,8 +1915,8 @@
     }
    ],
    "source": [
-    "# Renombrar las columnas de \n",
-    "# NOTA RELEVANTE sobre orden raster de textura de suelo caso Cafine:\n",
+    "# Rename the columns of \n",
+    "# RELEVANT NOTE on soil texture raster order Cafine case:\n",
     "# B1_1 = Clay + Silt\n",
     "# B2_1 = Sand\n",
     "# B3_1 = Silt\n",
@@ -2371,13 +2424,13 @@
     }
    ],
    "source": [
-    "# Obtener la correlación con la columna 'SAR' y ordenar por valor absoluto\n",
-    "correlaciones_sar = cormat['SAR'].abs().sort_values(ascending=False)\n",
+    "# Get the correlation with the column 'SAR' and sort by absolute value\n",
+    "correlations_sar = cormat['SAR'].abs().sort_values(ascending=False)\n",
     "\n",
-    "# Mostrar las 10 correlaciones más altas\n",
-    "# print(\"Las 10 correlaciones más altas con la columna 'SAR':\")\n",
-    "corr_df = pd.DataFrame(correlaciones_sar)\n",
-    "corr_df.head(61)"
+    "# display the 10 highest correlations\n",
+    "# print(\"The 10 highest correlations with column 'SAR':\")\n",
+    "corr_df = pd.DataFrame(correlations_sar)\n",
+    "corr_df.head(10)"
    ]
   },
   {
@@ -2431,22 +2484,29 @@
     }
    ],
    "source": [
-    "# Obtener la correlación con la columna 'SAR' y ordenar por valor absoluto\n",
-    "correlaciones_sar = cormat['SAR'].abs().sort_values(ascending=False)\n",
+    "# Get the correlation with the column 'SAR' and sort by absolute value\n",
+    "correlations_sar = cormat['SAR'].abs().sort_values(ascending=False)\n",
     "\n",
-    "# Seleccionar las 10 correlaciones más altas incluyendo 'SAR'\n",
-    "top_10_corr = correlaciones_sar.head(11).index\n",
+    "# Select the 10 highest correlations including 'SAR'.\n",
+    "top_10_corr = correlations_sar.head(11).index\n",
     "\n",
-    "# Crear una matriz de correlación para las 10 variables más correlacionadas con 'SAR'\n",
+    "# Create a correlation matrix for the 10 most correlated variables with 'SAR'.\n",
     "top_10_cormat = cormat.loc[top_10_corr, top_10_corr]\n",
     "\n",
     "mask = np.triu(np.ones_like(top_10_cormat, dtype=bool))\n",
     "\n",
-    "# Plotear la matriz de correlación de las 10 variables más correlacionadas\n",
+    "# Plot the correlation matrix of the 10 most correlated variables.\n",
     "plt.figure(figsize=(10, 8))\n",
     "sns.heatmap(top_10_cormat, annot=True, cmap='coolwarm', vmin=-1, vmax=1, mask=mask)\n",
     "plt.title('')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.5 Export the index with more correlation for make the predictions"
    ]
   },
   {
@@ -2561,21 +2621,21 @@
     }
    ],
    "source": [
-    "# ID de la carpeta en Google Drive\n",
-    "folder_id = '1gFgdT90qRKu4pFW-fVbKagEzPrkKTSDb'  # Reemplaza con el ID real de tu carpeta\n",
-    "file_title = 'PS_Index_filtered.tif'  # Nombre del archivo que buscas\n",
+    "# ID of the folder in Google Drive\n",
+    "folder_id = '1gFgdT90qRKu4pFW-fVbKagEzPrkKTSDb' # Replace with the actual ID of your folder\n",
+    "file_title = 'PS_Index_filtered.tif' # Name of the file you are looking for.\n",
     "\n",
     "try:\n",
-    "    file_list = drive.ListFile({'q': f\"'{folder_id}' in parents and trashed=false\"}).GetList()\n",
+    "    file_list = drive.ListFile({'q': f\"'{folder_id}' in parents and trashed=false\"}).GetList().\n",
     "    for file in file_list:\n",
     "        if file['title'] == file_title:\n",
-    "            file.GetContentFile(file_title)  # Descargar el archivo\n",
-    "            print(f\"Archivo {file_title} descargado exitosamente.\")\n",
+    "            file.GetContentFile(file_title) # Download the file.\n",
+    "            print(f\"File {file_title} downloaded successfully.\")\n",
     "            break\n",
     "    else:\n",
-    "        print(f\"Archivo {file_title} no encontrado en la carpeta {folder_id}.\")\n",
+    "        print(f\"File {file_title} not found in folder {folder_id}.\")\n",
     "except Exception as e:\n",
-    "    print(f\"Error al buscar el archivo en Google Drive: {e}\")"
+    "    print(f\"Error searching for the file in Google Drive: {e}\")"
    ]
   }
  ],
