Update - Add index to the codes

--- a/Final_work/Codes/Modeling.ipynb
+++ b/Final_work/Codes/Modeling.ipynb
@@ -382,7 +382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Run CNN-1D for predict soil saliniy with SAR"
+    "## 3. Run CNN-1D for predict soil salinity with SAR"
    ]
   },
   {
