--- a/Final_work/Codes/3.Modeling.ipynb
+++ b/Final_work/Codes/3.Modeling.ipynb
@@ -674,8 +674,8 @@
     "X_t_scaled = scaler.fit_transform(X_t)\n",
     "\n",
     "# Convert to PyTorch tensors\n",
-    "X1_tensor = torch.tensor(X_t_scaled, dtype=torch.float32).cpu()\n",
-    "y1_tensor = torch.tensor(y_t.values.flatten(), dtype=torch.float32).cpu()  # Convert to a 1D tensor\n",
+    "X1_tensor = torch.tensor(X_t_scaled, dtype=torch.float32)\n",
+    "y1_tensor = torch.tensor(y_t.values.flatten(), dtype=torch.float32)  # Convert to a 1D tensor\n",
     "\n",
     "# Create a DataLoader for X1 and y1 data\n",
     "data_tensor = TensorDataset(X1_tensor, y1_tensor)\n",
