Update - PS_Index download link

--- a/Final_work/Codes/3.Modeling.ipynb
+++ b/Final_work/Codes/3.Modeling.ipynb
@@ -12,6 +12,9 @@
     "2. Preparation of the CNN\n",
     "3. Execution of the CNN and results on 20% of the data and 100% of the data.\n",
     "4. Execution of the RF and results on 20% of the data and 100% of the data.\n",
+    "5. If you have problems downloading images, this code can be run without the 'PS_Index.tif' file. \n",
+    "6. The file 'PS_Index_filtered.tif' is already in the repository, so you can avoid executing the download of point 5.\n",
+    "7. The reason why the file 'PS_Index.tif' is not in the repository is because the file weighs more than 20MB (in this case 1.2 GB). \n",
     "\n",
     "Index\n",
     "\n",
