--- a/Final_work/Codes/3.Modeling.ipynb
+++ b/Final_work/Codes/3.Modeling.ipynb
@@ -15,7 +15,7 @@
     "5. If you have problems downloading images, this code can be run without the 'PS_Index.tif' file. \n",
     "6. The file 'PS_Index_filtered.tif' is already in the repository, so you can avoid executing the download of point 5.\n",
     "7. The reason why the file 'PS_Index.tif' is not in the repository is because the file weighs more than 20MB (in this case 1.2 GB). \n",
-    "\n",
+    "8. But you can download It using the link in the file 'PS_index.txt' in folder 'DataIntermediate'.\n",
     "Index\n",
     "\n",
     "### 1. Prepare and call the data\n",
